# opengl-4.6

./: CMakeLists.txt  README.md  rebar.config
.github/workflows/: static.yml  workflow.yml
c_src/: Makefile  gl.c  glad.c
c_src/include/glad/: glad.h
include/: gl.hrl
src/: gl.erl  opengl_4_6.app.src  opengl_4_6.erl
test/: gl_bitfield_test.erl  gl_buffer_test.erl  gl_enum_test.erl  gl_matrix_test.erl  gl_object_test.erl  gl_query_test.erl  gl_sampler_test.erl  gl_shader_program_test.erl  gl_sync_test.erl  gl_test.erl  gl_texture_test.erl  gl_vector_test.erl  gl_vertices_test.erl  test_gl.erl
